--- a/css/style.css
+++ b/css/style.css
@@ -11,7 +11,7 @@ body {
 }
 
 .header-top {
-    margin-bottom: 70px;
+    margin-bottom: 25px;
 }
 
 .header-top::after {
@@ -24,10 +24,46 @@ body {
     margin-top:50px;
 }
 
+.upper {
+    text-transform: uppercase;
+}
+
+.h{
+    margin: 0;
+    font-size: 28px;
+    line-height: 35px;
+    font-weight: 500;
+}
+
+.center {
+    text-align: center;
+}
+
+.button {
+    /*display: inline-block;*/
+    padding: 7px;
+    width: 200px;
+    font-size: 14px;
+    line-height: 24px;
+    vertical-align: top;
+    text-align: center;
+    text-decoration: none;
+    text-transform: uppercase;
+    color: black;
+    cursor: pointer;
+    outline: none;
+    border: 1px gray solid;
+    border-radius: 10px;
+}
+
 /*------ main-header ------*/
 .main-header {
     padding-top: 30px;
     padding-bottom: 30px;
+}
+
+.main-header .header-top {
+    border-bottom: 1px gray solid;
 }
 
 .promo {
@@ -44,37 +80,89 @@ body {
     height: 100px;
 }
 
-.button {
-    max-width: 200px;
-    height: 50px;
-    margin: 20px auto auto;
-}
+/*.button {*/
+/*    max-width: 200px;*/
+/*    height: 50px;*/
+/*    margin: 20px auto auto;*/
+/*}*/
 
 .main-menu {
     float: right;
     width: 680px;
     margin-top: 10px;
     margin-bottom: 10px;
-
-    min-height: 40px;
 }
 
-/*------ subjects ------*/
+.main-menu ul {
+    margin: 0;
+    padding: 0;
+    list-style: none;
+}
+
+.main-menu li {
+    display: inline-block;
+    margin-right: 100px;
+    vertical-align: top;
+    font-size: 18px;
+    line-height: 24px;
+}
+
+.main-menu li:last-child{
+    margin-right:0;
+}
+
+.main-menu a {
+    color: #000000;
+    text-decoration: none;
+}
+
+.main-menu a:hover {
+    text-decoration: underline;
+}
+
+.main-menu a:active {
+    text-decoration: none;
+    opacity: 0.3;
+}
+
+.first-row {
+    margin: 0;
+    /*text-transform: uppercase;*/
+    /*font-weight: 700;*/
+    font-size: 28px;
+    line-height: 28px;
+}
+
+.promo p {
+    margin: 0;
+    margin-bottom: 35px;
+    color: #404040;
+    font-size: 18px;
+    line-height: 24px;
+}
+
 .about {
     margin: auto;
     width: 680px;
     margin-top: 10px;
 
     min-height: 40px;
+    text-align: center;
 }
 
+/*------ subjects ------*/
+
 .header-subjects {
-    margin-bottom: 50px;
+    margin-bottom: 30px;
 }
 
 .subjects {
     padding-top: 30px;
-    padding-bottom: 30px;
+    padding-bottom: 20px;
+}
+
+.subjects .h {
+    text-align: center;
 }
 
 .subjects .container::after {
@@ -86,42 +174,48 @@ body {
 .subjects-item {
     float: left;
     width: 120px;
-    min-height: 130px;
+    padding-top:100px;
+    text-align: center;
     margin-left:60px;
+    min-height: 50px;
+
+    position: relative;
+}
+
+.subjects-item img {
+    max-width:130px;
+    max-height: 100px;
+    top: -0px;
+    left: -7.5px;
+    /*left: 20px;*/
 }
 
 .subjects-item:last-child {
     margin-right: 0;
 }
 
-
 /*------ examples ------*/
 
 .examples {
     padding-top: 30px;
-    padding-bottom: 30px;
 }
 
 .header-examples {
-    margin-bottom: 70px;
+    margin-bottom: 120px;
 }
 
 .examples-item {
-    margin-bottom: 100px;
+    margin-bottom: 80px;
+}
+
+.examples-item:last-child{
+    margin-bottom: 0;
 }
 
 .examples-item::after {
     display: table;
     clear: both;
     content: "";
-}
-
-.examples-author {
-    float: left;
-    padding-left: 170px;
-    width: 130px;
-
-    min-height: 140px;
 }
 
 .examples-content-right {
@@ -141,6 +235,28 @@ body {
     min-height: 140px;
 }
 
+.examples-content-left p {
+    margin: 0;
+    margin-bottom: 10px;
+    margin-left: 50px;
+    color: #404040;
+    font-size: 26px;
+    line-height: 24px;
+    font-weight: bold;
+    position: relative;
+}
+
+
+
+.examples-content-right p {
+    margin: 0;
+    margin-bottom: 10px;
+    color: #404040;
+    font-size: 40px;
+    line-height: 24px;
+    font-weight: bold;
+
+}
 /*------ contact ------*/
 
 
@@ -159,73 +275,101 @@ body {
     content: "";
 }
 
-.contacts-item {
-    float: left;
-    width: 120px;
-    height: 130px;
-    margin-right:30px;
+.item {
+    width: 100px;
+    display: inline-block;
+    padding: 80px 15px 20px 15px;
+    font-size: 16px;
+    border: none;
     position: relative;
-    transition: 2s;
-    cursor: pointer;
+    margin-right:  30px;
+    text-align: center;
 }
 
-.content1 {
-    display: none;
-    width: 575px;
-    height: 100px;
-    margin: 30px auto 30px auto;
-    position: absolute;
-    top: 130px;
-}
-.content2 {
-    display: none;
-    width: 575px;
-    height: 100px;
-    margin: 30px auto 30px auto;
-    position: absolute;
-    top: 130px;
-    left: -155px;
-}
-.content3 {
-    display: none;
-    width: 575px;
-    height: 100px;
-    margin: 30px auto 30px auto;
-    position: absolute;
-    top: 130px;
-    left: -310px;
-}
-.content4 {
-    display: none;
-    width: 575px;
-    height: 100px;
-    margin: 30px auto 30px auto;
-    position: absolute;
-    top: 130px;
-    left: -465px;
+.item:last-child {
+    margin-right: 0;
 }
 
-.contacts-item:nth-child(1):hover .content1 {
+.dropdown-content {
+    display: none;
+    position: absolute;
+    width:615px;
+    height:150px;
+}
+.dropdown {
+    vertical-align: top;
+    /*text-align: center;*/
+    max-width: 200px;
+    display: inline-block;
+    margin-right: 100px;
+}
+.dropdown > ul > li{
+    list-style: none;
+    margin-bottom: 10px;
+    font-size: 20px;
+    line-height: 24px;
+    text-align: left;
+}
+
+.dropdown a {
+    color: black;
+    text-decoration: none;
+
+}
+
+.dropdown:last-child {
+    margin-right: 0;
+}
+
+.dropdown-content1{
+    top: 160px;
+    left: 0;
+}
+.dropdown-content2{
+    top: 160px;
+    left: -162.5px;
+}
+.dropdown-content3{
+    top: 160px;
+    left: -325px;
+}
+.dropdown-content4{
+    top: 160px;
+    left: -487.5px;
+}
+
+
+.item:nth-child(1):hover .dropdown-content1 {
+    display: block;
+    opacity: 1;
+    transition: opacity 1s;
+
+
+}
+.item:nth-child(2):hover .dropdown-content2 {
+    display: block;
+    /*opacity: 1;*/
+    /*transition: all 1s;*/
+}
+.item:nth-child(3):hover .dropdown-content3 {
     display: block;
 }
-
-.contacts-item:nth-child(2):hover .content2 {
+.item:nth-child(4):hover .dropdown-content4 {
     display: block;
+    /*opacity: 1;*/
+    /*transition: all 1s;*/
+}
+.item img {
+    width: 100px;
+    height: 80px;
+    position: absolute;
+    top: 5px;
+    left: 12.5px;
 }
 
-.contacts-item:nth-child(3):hover .content3 {
-    display: block;
+.item:nth-child(1) {
+    margin-left: 200px;
 }
-
-.contacts-item:nth-child(4):hover .content4 {
-    display: block;
-}
-
-.contacts-item:nth-child(1) {
-    margin-left: 205px;
-}
-
-
 
 .contacts-title {
     margin: 0;
@@ -265,12 +409,14 @@ body {
 
     min-height: 420px;
 }
+
 /*------ pdf ------*/
 
 .pdf {
-    padding-top: 30px;
-    padding-bottom: 80px;
+    padding-top: 50px;
+    padding-bottom: 130px;
 }
+
 
 .pdf .container {
     display: table;
@@ -278,15 +424,38 @@ body {
     content: "";
 }
 
-.pdf-item:last-child {
-    margin-right: 0;
+
+.pdf .button {
+    margin: auto;
 }
 
 /*------ footer ------*/
 .main-footer {
     padding-top: 60px;
-    padding-bottom: 75px;
+    padding-bottom: 40px;
 
+    background: #4b5f7a
+
+}
+
+.footer-top ul{
+    margin: 0;
+    padding: 0;
+    list-style: none;
+}
+
+.footer-top a {
+    color: #000000;
+    text-decoration: none;
+}
+
+.footer-menu > ul > li:hover a {
+    color: coral;
+    text-decoration: underline solid;
+}
+
+.footer-menu > ul > li {
+    margin-bottom: 15px;
 }
 
 .footer-top::after,
@@ -301,7 +470,7 @@ body {
     float: left;
     width: 150px;
     margin: 25px 70px 25px auto;
-    min-height: 185px;
+    height: 185px;
 }
 
 .footer-menu:first-child {
@@ -332,21 +501,49 @@ body {
 }
 
 .footer-social {
-    min-height: 50px;
+    max-height: 50px;
 
     position: absolute;
-    bottom:-135px;
+    bottom:-5px;
 }
 
-.footer-button {
-    height: 50px;
+.main-footer .button {
     position: absolute;
-    bottom: -135px;
+    bottom:-10px;
+    width: 150px;
+    background: whitesmoke;
 }
+
+.social-btn {
+    display: inline-block;
+    font-size: 0;
+    vertical-align: middle;
+    text-align: center;
+    margin-left: 15px;
+    width: 30px;
+    height: 30px;
+}
+
+.social-btn-vk {
+    background-image: url("../image/none.png");
+    background-repeat: no-repeat;
+}
+
+.social-btn-fb {
+    position: absolute;
+    background-image: url("../image/none.png");
+    background-repeat: no-repeat;
+}
+.social-btn-in {
+    background-image: url("../image/none.png");
+    background-repeat: no-repeat;
+}
+
+
 
 /*------ colors ------*/
 .gray_border {
-    border: 2px solid gray;
+    border: 1.2px solid gray;
     border-radius: 25px;
 }
 
@@ -382,11 +579,13 @@ body {
     top: -10px;
 }
 
-
-
-
-
-
+.none10 {
+    width:50px;
+    height: 38px;
+    position: absolute;
+    left: -6px;
+    top: -10px;
+}
 
 
 
@@ -397,243 +596,4 @@ body {
 
 .gl0, .gl1, .gl2, .gl3 {
     position: relative;
-}
-
-.gl0:before, .gl1:before, .gl2:before, .gl3:before {
-    content: '';
-    position: absolute;
-    left: -1px;
-    top: 0;
-    height: 20px;
-    padding: 2px 5px;
-    font-size: 14px;
-    font-weight: bold;
-    line-height: 20px;
-    font-family: "Courier New", monotype, serif;
-    white-space: nowrap;
-}
-
-.gl0 {
-    box-shadow: inset 0 0 0 2px blue;
-    background: rgba(0, 0, 255, .1);
-}
-
-.gl0:before {
-    color: #fff;
-    background: rgba(0, 0, 255, .9);
-}
-
-.gl1 {
-    box-shadow: 0 0 0 2px green;
-    background: rgba(0, 128, 0, .1);
-}
-
-.gl1:before {
-    color: #fff;
-    background: rgba(0, 128, 0, .9);
-}
-
-.gl2 {
-    box-shadow: 0 0 0 2px rgb(255, 45, 82);
-    background: rgba(255, 45, 82, .1);
-}
-
-.gl2:before {
-    color: #fff;
-    background: rgba(255, 45, 82, .9);
-}
-
-.gl3 {
-    box-shadow: 0 0 0 2px rgb(234, 255, 45);
-    background: rgba(234, 255, 45, .1);
-}
-
-.gl3:before {
-    color: #000;
-    background: rgba(234, 255, 45, .8);
-}
-
-.main-header:before {
-    content: ".main-header";
-}
-
-.container:before {
-    content: ".container";
-    top: -25px;
-    left: -2px;
-}
-
-.header-top:before {
-    content: ".header-top";
-    top: -25px;
-    left: auto;
-    right: -2px;
-}
-
-.header-contacts:before {
-    content: ".header-contacts";
-    top: -25px;
-    left: auto;
-    right: -2px;
-}
-
-.header-subjects:before {
-    content: ".header-subjects";
-    top: -25px;
-    left: auto;
-    right: -2px;
-}
-
-.header-examples:before {
-    content: ".header-examples";
-    top: -25px;
-    left: auto;
-    right: -2px;
-}
-
-.logo:before {
-    content: ".logo";
-}
-
-.main-menu:before {
-    content: ".main-menu";
-}
-
-.button:before {
-    content: ".button";
-}
-
-.main-text:before {
-    content: ".main-text";
-}
-
-.about:before {
-    content: ".about";
-}
-
-.promo:before {
-    content: ".promo";
-}
-
-.pdf-item:before {
-    content: ".pdf-item";
-}
-
-.footer-button:before {
-    content: ".footer-button";
-}
-.contacts-item-big:before {
-    content: ".contacts-item-big";
-}
-.contacts-item:before {
-    content: ".contacts-item";
-}
-.contacts-info:before {
-    content: ".contacts-info";
-}
-.subjects:before {
-    content: ".subjects";
-}
-
-.subjects-item:before {
-    content: ".subjects-item";
-}
-.subjects-item-big:before {
-    content: ".subjects-item-big";
-}
-
-
-.examples:before {
-    content: ".examples";
-}
-
-.examples-title:before {
-    content: ".examples-title";
-}
-
-.examples-item:before {
-    content: ".examples-item";
-    top: -25px;
-    left: -2px;
-}
-
-.examples-author:before {
-    content: ".examples-author";
-}
-
-.examples-content-right:before {
-    content: ".examples-content-right";
-}
-
-.examples-content-left:before {
-    content: ".examples-content-left";
-}
-
-.contacts:before {
-    content: ".contacts";
-}
-.pdf:before {
-    content: ".pdf";
-}
-
-.contacts-title:before {
-    content: ".contacts-title";
-}
-
-.content1:before {
-    content: ".content1";
-}
-
-.content2:before {
-    content: ".content2";
-}
-
-.content3:before {
-    content: ".content3";
-}
-
-.content4:before {
-    content: ".content4";
-}
-
-.contacts-form:before {
-    content: ".contacts-form";
-}
-
-.contacts-instruction:before {
-    content: ".contacts-instruction";
-}
-
-.main-footer:before {
-    content: ".main-footer";
-}
-
-.footer-top:before {
-    content: ".footer-top";
-    top: -25px;
-    left: auto;
-    right: -2px;
-}
-
-.footer-bottom:before {
-    content: ".footer-bottom";
-    top: -25px;
-    left: auto;
-    right: -2px;
-}
-
-.footer-menu:before {
-    content: ".footer-menu";
-}
-
-.copyright:before {
-    content: ".copyright";
-}
-
-.footer-social-promo:before {
-    content: ".footer-social-promo";
-}
-
-.footer-social:before {
-    content: ".footer-social";
 }
